card alignment fix

--- a/projects/WebUI/code/src/css/custom.css
+++ b/projects/WebUI/code/src/css/custom.css
@@ -237,6 +237,10 @@ select {
     height: 730px;
   }
 
+  .cardAlignment{
+    margin-right: 20px;
+  }
+
   .carouselImage {
     width: 100%;
   }
